Fix quiz list layout breakage
Fixes #55.

--- a/app/assets/stylesheets/module/_form.css.scss
+++ b/app/assets/stylesheets/module/_form.css.scss
@@ -2,6 +2,8 @@
 }
 
   .form-inline {
+    margin-bottom: 0;
+
     .controls,
     ol, ul, li,
     .btn-toolbar {
