--- a/app/assets/stylesheets/module/_list-pretty.css.scss
+++ b/app/assets/stylesheets/module/_list-pretty.css.scss
@@ -23,6 +23,7 @@
     }
 
     > * {
+      display: inline-block;
       vertical-align: middle;
     }
   }
